--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
 				<artifactId>rpm-maven-plugin</artifactId>
 				<version>2.1-alpha-3</version>
 			</plugin>
+			<plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+            </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -93,6 +96,25 @@
 						</postinstallScriptlet>
 					</configuration>
 				</plugin>
+				<plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                         <descriptors>
+                              <descriptor>src/assemble/distribution.xml</descriptor>
+                         </descriptors>
+                         <appendAssemblyId>false</appendAssemblyId>
+                    </configuration>
+                    <executions>
+                         <execution>
+                              <id>make-assembly</id>
+                              <phase>package</phase>
+                              <goals>
+                                  <goal>single</goal>
+                              </goals>
+                         </execution>
+                    </executions>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
