Renamed SCHEMANAME to SID, made datasource non-JTA.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <oracle.db.jndiName>java:jboss/datasources/OracleDS</oracle.db.jndiName>
     <oracle.db.host>localhost</oracle.db.host>
     <oracle.db.port>1521</oracle.db.port>
-    <oracle.db.schemaName>SID</oracle.db.schemaName>
+    <oracle.db.sid>TEST</oracle.db.sid>
     <oracle.db.username>scott</oracle.db.username>
     <oracle.db.password>tiger</oracle.db.password>
     <rpm.key.name>D3AABAF5</rpm.key.name>
